Update homepage blurb

--- a/config/locales/views/home/index.en.yml
+++ b/config/locales/views/home/index.en.yml
@@ -4,21 +4,14 @@ en:
       about: About Me
       blurb_html: |
         <p>
-          Hi! I’m Jason. Here are some things about me:
+          Hi! I’m Jason.
         </p>
         <p>
           I live in Oregon with my wife, Shandy.
         </p>
         <p>
-          I’m a writer. Mostly horror. I'm represented by Lynnette Novak at the
-          <a href="https://www.theseymouragency.com/" target="_blank">Seymour Agency</a>,
-          who is currently subbing my first novel, <i>Where the Dead Seep Through</i>,
-          the story of six mountain climbers, trapped in a supernatural storm and haunted by the
-          vengeful ghost of a centuries-old priest.
-        </p>
-        <p>
-          A recent transplant from Colorado, I wrote <i>Where the Dead Seep Through</i> while living
-          deep in the Rockies, where I spent my free time hiking and snowshoeing in the backcountry.
+          I’m a writer. Mostly horror. Currently working on my first novel, <i>The Devil's Castle</i>,
+          about a haunted reality show, like Big Brother if it were filmed in Hill House.
         </p>
         <p>
           My writing has won first place in the Zebulon contest at the
