Few more tweaks to the home page

--- a/config/locales/views/home/index.en.yml
+++ b/config/locales/views/home/index.en.yml
@@ -10,8 +10,9 @@ en:
           I live in Oregon with my wife, Shandy.
         </p>
         <p>
-          I’m a writer. Mostly horror. Currently working on my first novel, <i>The Devil's Castle</i>,
-          about a haunted reality show, like Big Brother if it were filmed in Hill House.
+          I’m a writer. Mostly of horror. I'm currently working on my first novel,
+          <i>The Devil's Castle</i>, about a haunted reality show, like Big Brother if it were
+          filmed in Hill House.
         </p>
         <p>
           My writing has won first place in the Zebulon contest at the
