Add Mastodon link

--- a/config/locales/views/home/index.en.yml
+++ b/config/locales/views/home/index.en.yml
@@ -23,10 +23,8 @@ en:
         </p>
         <p>
           You can <a href="mailto:jasonrush@jasonrush.com" target="_blank">email me</a>, find me on
-          <a href="https://twitter.com/thejasonrush" target="_blank">Twitter</a>,
+          <a rel="me" href="https://home.social/@jasonrush" target="_blank">Mastodon</a>,
           <a href="https://www.instagram.com/thejasonrush/" target="_blank">Instagram</a>,
           <a href="https://www.facebook.com/thejasonrush" target="_blank">Facebook</a>, and
-          <a href="https://www.goodreads.com/user/show/5524830-jason-rush" target="_blank">
-            Goodreads
-          </a>.
+          <a href="https://www.goodreads.com/user/show/5524830-jason-rush" target="_blank">Goodreads</a>.
         </p>
