Fix missing comma

--- a/config/locales/views/home/index.en.yml
+++ b/config/locales/views/home/index.en.yml
@@ -23,7 +23,7 @@ en:
         </p>
         <p>
           You can <a href="mailto:jasonrush@jasonrush.com" target="_blank">email me</a>, find me on
-          <a rel="me" href="https://social.horrorhub.club/@jasonrush" target="_blank">Mastodon</a>
+          <a rel="me" href="https://social.horrorhub.club/@jasonrush" target="_blank">Mastodon</a>,
           <a href="https://www.instagram.com/thejasonrush/" target="_blank">Instagram</a>,
           <a href="https://www.facebook.com/thejasonrush" target="_blank">Facebook</a>, and
           <a href="https://www.goodreads.com/user/show/5524830-jason-rush" target="_blank">Goodreads</a>.
